Far from complete, but got a lot more integration and planning out done The program should be ready to implement document modifications and their relative LSP events, along with other basic features